--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display:flex;
+  width:100vw;
+  min-height:100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 50px;
+  background-color: #FCFCFC;
 }
 
-.App-link {
-  color: #61dafb;
+.app-container {
+  display: inline-flex;
+  flex-direction: column;
+  width: 100%;
+  /* height: 700px; */
+  /* max-width:600px; */
+  /* overflow-y: scroll; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  font-size:42px;
+  font-weight:800;
 }
+
+.post {
+  border: 1px solid black;
+  min-height: 100px;
+  border-radius: 8px;
+}
+
+.post-container {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items:center;
+  width:90%;
+  height:100%;
+}
+
+.post-list {
+  display: inline-flex;
+  flex-direction: column;
+  gap:20px;
+  margin-top: 30px;
+}
+
